--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h2>Seja bem-vindo(a) ao meu portfólio de projetos de Ciência de Dados.<br />
+											<h1>Seja bem-vindo(a) ao meu portfólio de projetos de Ciência de Dados.<br />
 											</h2>
 									
 										</header>
@@ -154,7 +154,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/markus-winkler-IrRbSND5EUc-unsplash.jpg" alt="" /></a>
 											<h3>Desenvolvimento de um <b>Painel Gerencial para Negócio com Streamlit</b>.</h3>
-											<p> No projeto chamado Fome Zero, os conceitos de programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimento web como o Streamlit e Github, foram utilizados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery extraídas a partir de uma análise exploratória.
+											<p> No projeto chamado Fome Zero, os conceitos de programação em Python, manipulação de dados, pensamento estratégico, lógica de negócio e ferramentas de desenvolvimento web como o Streamlit e Github, foram utilizados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery extraídas a partir de uma análise exploratória.
 											</p>
 											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet. </p>
 
@@ -168,7 +168,7 @@
 											</ul>
 
 											<ul class="actions">
-												<li><a href="https://dslucasribeiro-fomezero.streamlit.app" class="button">Saiba Mais - GitHub</a></li>
+												<li><a href="https://github.com/dslucasribeiro/fome_zero" class="button">Saiba Mais - GitHub</a></li>
 											</ul>
 										</article>
 										<article>
