--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										
 									</div>
 									<span class="image object">
-										<img src="images/carlos-muza-hpjSkU2UYSU-unsplash.jpg" alt="teste" />
+										<img src="images/IMG_2152.jpg" alt="teste" />
 									</span>
 								</section>
 
@@ -152,8 +152,8 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/markus-winkler-IrRbSND5EUc-unsplash.jpg" alt="" /></a>
-											<h3>Desenvolvimento de um <b>Painel Gerencial para Negócio com Streamlit</b>.</h3>
+											<a href="#" class="image"><img src="images/amoplace-imagem-ste.png" alt="" /></a>
+											<h3>Desenvolvimento de um Painel Gerencial para Negócio com Streamlit.</h3>
 											<p> No projeto chamado Fome Zero, os conceitos de programação em Python, manipulação de dados, pensamento estratégico, lógica de negócio e ferramentas de desenvolvimento web como o Streamlit e Github, foram utilizados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery extraídas a partir de uma análise exploratória.
 											</p>
 											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet. </p>
