--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										
 									</div>
 									<span class="image object">
-										<img src="images/IMG_2152.jpg" width="320" height="205" alt="teste" /></div>
+										<img src="images/Portfolio.jpg" alt="Portfolio" /></div>
 									</span>
 								</section>
 
@@ -152,7 +152,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/amoplace-imagem-site.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/marketfood.png" alt="" /></a>
 											<h3>Desenvolvimento de um Painel Gerencial para Negócio com Streamlit.</h3>
 											<p> No projeto chamado Fome Zero, os conceitos de programação em Python, manipulação de dados, pensamento estratégico, lógica de negócio e ferramentas de desenvolvimento web como o Streamlit e Github, foram utilizados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery extraídas a partir de uma análise exploratória.
 											</p>
