--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/marketfood.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/markus-winkler-IrRbSND5EUc-unsplash.jpg" alt="" /></a>
 											<h3>Desenvolvimento de um Painel Gerencial para Negócio com Streamlit.</h3>
 											<p> No projeto chamado Fome Zero, os conceitos de programação em Python, manipulação de dados, pensamento estratégico, lógica de negócio e ferramentas de desenvolvimento web como o Streamlit e Github, foram utilizados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery extraídas a partir de uma análise exploratória.
 											</p>
