--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Você vai encontrar também, minhas experiências profissionais, habilidades, fe
 									</header>
 									<p>Me chamo Lucas Ribeiro, sou formado em Análise e Desenvolvimento de Sistemas e atuo a mais de 4 anos como Desenvolvedor backend em uma multinacional e Analista de dados/DBA em uma autarquia do Estado. Atualmente, venho desenvolvendo minhas skills com dados em projetos pessoais de Ciência de Dados, visando adquirir experiência em solução de problemas de negócio e domínio sobre as ferramentas de análise de dados.
 
-Busco migrar de carreira e atuar full time como Cientista de Dados, entregando soluções para automatizar processos e insights para guiar a tomada de decisão de gestores.
+</br>Busco migrar de carreira e atuar full time como Cientista de Dados, entregando soluções para automatizar processos e insights para guiar a tomada de decisão de gestores.
 
 									</p>
 
@@ -132,8 +132,8 @@ Busco migrar de carreira e atuar full time como Cientista de Dados, entregando s
 											publicação do algoritmo treinado em produção, utilizando ferramentas de Cloud
 											Computing.</p>
 
-											<h2 id="content">4+ anos como Analista de Sistemas</h2>
-											<p>Com foco em banco de dados, tratamento de Sistemas e coordenação de equipe.</p>
+											<h2 id="content">4+ anos como Analista de Sistemas, Desenvolvedor e Administrador de Banco de Dados</h2>
+											<p>Desenvolvimento de aplicações com C#, .Net e Python, Administração de Banco de dados relacionais e análise exploratória para tomada de decisões.</p>
 									</section>
 
 							<!-- Section -->
@@ -144,23 +144,21 @@ Busco migrar de carreira e atuar full time como Cientista de Dados, entregando s
 									<div class="posts">
 										<article>
 											<a href="#" class="image"><img src="images/markus-winkler-IrRbSND5EUc-unsplash.jpg" alt="" /></a>
-											<h3>Construção de um programa de fidelidade com clusterização de
-												clientes.</h3>
-											<p> Python, Estatística e técnicas não-supervisionadas de Machine Learning foram utilizados para
-												segmentar um grupo de clientes com base em suas características de performance de
-												compra, a fim de selecionar grupos de clientes para formar um programa de Fidelidade
-												com o objetivo de aumentar a receita da empresa. E o resultado dessa solução, caso
-												fosse implementada, seria de R$ 15MM de dólares de receita anual.
+											<h3>Desenvolvimento de um Painel Gerencial para Negócio com Streamlit.</h3>
+											<p> No projeto chamado Fome Zero, os conceitos de programação em Python, manipulação de dados, pensamento estratégico, lógica de negócio e ferramentas de desenvolvimento web como o Streamlit e Github, foram utilizados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery extraídas a partir de uma análise exploratória.
 												</p>
+											<p>
+												O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet. 
+											</p>
 
 											<h4>As ferramentas utilizadas foram:</h4>
 											<ul>
-												<li>Git, Gitlab e Github.</li>
-												<li>Python, Pandas, Matplotlib e Seaborn.</li>
-												<li>Jupyter Notebook.</li>
-												<li>K-Means, Hierarquical Clustering, DBScan.</li>
-												<li>AWS Cloud (EC2, S3, Postgres, SQLite).</li>
-												<li>Metabase Visualization.</li>
+												<li>Python</li>
+												<li>JupyterLab</li>
+												<li>Streamlit</li>
+												<li>Streamlit Cloud</li>
+												<li>GitHub</li>
+												
 											</ul>
 
 											<ul class="actions">
