--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Você vai encontrar também, minhas experiências profissionais, habilidades, fe
 											</ul>
 
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/dslucasribeiro/fome_zero" class="button">Saiba Mais - GitHub</a></li>
 											</ul>
 										</article>
 										<article>
